--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<!--Button 1-->
 		<div class="btn-group">
 			<button type="button" class="btn butimg btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img width="20px" height="20px" src="img/volleyball.png" style="margin:0px 10px 0px 0px;">Sport 1 <span class="caret"></span>
+            <img width="20px" height="20px" src="https://cloud.githubusercontent.com/assets/7635998/8732321/a66f70b0-2bca-11e5-9754-3fe7ac673d96.png" style="margin:0px 10px 0px 0px;">Sport 1 <span class="caret"></span>
           	</button>
           	<ul class="dropdown-menu">
 	            <li><a href="#">Some Detail</a></li>
@@ -48,7 +48,7 @@
         <!--Button 2-->
         <div class="btn-group">
           <button type="button" class="btn butimg btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <img width="20px" height="20px" src="img/soccer.png" style="margin:0px 10px 0px 0px;">Sport 2<span class="caret"></span>
+            <img width="20px" height="20px" src="https://cloud.githubusercontent.com/assets/7635998/8732322/a66f8f96-2bca-11e5-93c8-808a4d2135d6.png" style="margin:0px 10px 0px 0px;">Sport 2<span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
             <li><a href="#">Some Detail</a></li>
@@ -121,7 +121,7 @@
     <div class="col-md-6 col-md-offset-3"> 
         <h1>Our Solution</h1><hr><br>
     </div>
-        <center><img width="80%" src="img/chev.png"><br><br><a class="btn btn-default page-scroll" href="#list"><span class="glyphicon glyphicon-triangle-bottom"aria-hidden="true"></span></a></center>
+        <center><img width="80%" src="https://cloud.githubusercontent.com/assets/7635998/8732318/a66b85cc-2bca-11e5-91c6-010734f8fd23.png"><br><br><a class="btn btn-default page-scroll" href="#list"><span class="glyphicon glyphicon-triangle-bottom"aria-hidden="true"></span></a></center>
         
 </div>
 
